@@ -615,8 +615,12 @@ size, and full-buffer size."
 		  (overlay-put overlay 'face 'default)))
 	    (insert-image image (or alt "*")))
 	  (put-text-property start (point) 'image-size size)
-	  ;; Only animate multi-frame things that specify a delay.  FIXME?
-	  (when (cdr (image-animated-p image))
+	  (when (if (fboundp 'image-multi-frame-p)
+		    ;; Only animate multi-frame things that specify a
+		    ;; delay; eg animated gifs as opposed to
+		    ;; multi-page tiffs.  FIXME?
+		    (cdr (image-multi-frame-p image))
+		  (image-animated-p image))
 	    (image-animate image nil 60)))
 	image)
     (insert alt)))
